@@ -10,6 +10,8 @@
           (thanks to Eric Hymowitz, Paul Fenwick).
 - TS-34   Tasksh throw a warning at the end of a review command
           (thanks to bjonnh).
+- TW-1936 Tweak tests to have fuller TAP compliance
+          (thanks to Paul J. Fenwick)
 - Review report now defaults to 6 days instead of 1 weeķ, which is more
   convenient for those who review weekly
           (thanks to Dirk Deimeke).
